syntax = "proto3";
package kratos.api;

option go_package = "github.com/goxiaoy/go-saas-kit/saas/private/conf;conf";

import "conf/conf.proto";
import "blob/blob.proto";

message Bootstrap {
  Data data = 2;
  conf.Security security=3;
  conf.Services services =4;
  conf.Logging logging=6;
  conf.Tracers tracing=7;

  SaasConf saas=20;
}

message Data {
  conf.Endpoints endpoints = 1;
  map<string,blob.BlobConfig> blobs=2;
}

message SaasConf{
    repeated DatabaseTemplate database = 1;
}

message DatabaseTemplate{
  string name=1;
  string template=2;

}